The uploaded notes can now be viewed, shared with friends, removed and so on. It's linked to the database. Friends is also fixed, you can now accept pending friend requests, remove friends from your list, and view a list of friends (in the database). You can send them messages and view the message logs at any time since it's also added to the database.

--- a/InspirationLabProjectStanSeyit.csproj
+++ b/InspirationLabProjectStanSeyit.csproj
@@ -127,6 +127,9 @@
     <Compile Include="Character.xaml.cs">
       <DependentUpon>Character.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Chat.xaml.cs">
+      <DependentUpon>Chat.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Contact.xaml.cs">
       <DependentUpon>Contact.xaml</DependentUpon>
     </Compile>
@@ -157,6 +160,7 @@
     </Compile>
     <Compile Include="Models\Friend.cs" />
     <Compile Include="Models\GameScore.cs" />
+    <Compile Include="Models\Note.cs" />
     <Compile Include="Models\StudyGroup.cs" />
     <Compile Include="Models\StudyMaterial.cs" />
     <Compile Include="Models\User.cs" />
@@ -181,6 +185,10 @@
       <DependentUpon>StudyMaterial.xaml</DependentUpon>
     </Compile>
     <Page Include="Character.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Chat.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
