Users can submit new study locations on the map, only the admin can view the suggestions, accept them or decline them. The accepted locations will be showcased on the map. Dark mode is also implemented for these pages. Further the admin role has been assigned to user ID1 (seyit_halat). The database was also updated to differentiate the regular member role and admin role. The database for the locations is also fully functional.

--- a/InspirationLabProjectStanSeyit.csproj
+++ b/InspirationLabProjectStanSeyit.csproj
@@ -149,6 +149,9 @@
     <Compile Include="Games\WordScrambleGame.xaml.cs">
       <DependentUpon>WordScrambleGame.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LocationSubmissionsAdmin.xaml.cs">
+      <DependentUpon>LocationSubmissionsAdmin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Management.xaml.cs">
       <DependentUpon>Management.xaml</DependentUpon>
     </Compile>
@@ -160,6 +163,7 @@
     </Compile>
     <Compile Include="Models\Friend.cs" />
     <Compile Include="Models\GameScore.cs" />
+    <Compile Include="Models\LocationSubmissions.cs" />
     <Compile Include="Models\Note.cs" />
     <Compile Include="Models\StudyGroup.cs" />
     <Compile Include="Models\StudyMaterial.cs" />
@@ -221,6 +225,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="lighttheme.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LocationSubmissionsAdmin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
