--- a/InspirationLabProjectStanSeyit.csproj
+++ b/InspirationLabProjectStanSeyit.csproj
@@ -152,6 +152,9 @@
     <Compile Include="Games\WordScrambleGame.xaml.cs">
       <DependentUpon>WordScrambleGame.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GroupCreateWindow.xaml.cs">
+      <DependentUpon>GroupCreateWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LocationSubmissionsAdmin.xaml.cs">
       <DependentUpon>LocationSubmissionsAdmin.xaml</DependentUpon>
     </Compile>
@@ -172,6 +175,7 @@
     <Compile Include="Models\StudyGroup.cs" />
     <Compile Include="Models\StudyMaterial.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Planner.xaml.cs">
       <DependentUpon>Planner.xaml</DependentUpon>
     </Compile>
@@ -234,6 +238,10 @@
     <Page Include="Games\WordScrambleGame.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GroupCreateWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="lighttheme.xaml">
       <SubType>Designer</SubType>
@@ -362,7 +370,11 @@
     <Resource Include="Images\mathrace.png" />
     <Resource Include="Images\quizsprint.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\avatar1.png" />
+    <Resource Include="Images\avatar2.png" />
+    <Resource Include="Images\avatar3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
