--- a/InspirationLabProjectStanSeyit.csproj
+++ b/InspirationLabProjectStanSeyit.csproj
@@ -375,6 +375,9 @@
     <Resource Include="Images\avatar2.png" />
     <Resource Include="Images\avatar3.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\avatar4.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
